--- a/Harezlak.html
+++ b/Harezlak.html
@@ -98,7 +98,7 @@
             <hr>
 
             <div class="item has-text-centered">
-                <h1 class="front-head">Jarek Harezlak, Ph.D.</h1>
+                <h1 class="front-head">Jaroslaw Harezlak, Ph.D.</h1>
             </div>
             <p class="special-content">Dr. Harezlak is an Associate Professor in the Department of Epidemiology and
 			Biostatistics at the Indiana University School of Public Health-Bloomington,
