--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                                 <h2 style="padding-bottom:5px">
                                     Friday, Mar 30, 2018
                                 </h2>
+				<h2 style="padding-bottom:5px">
+				    1:15 - 2:15 PM | Luddy Auditorium 1106
+				</h2>
                                 <h2 class="upcoming-title">
                                     Brain Connectivity-Informed Regularization Methods for Regression
                                 </h2>
